feat(MySQL)!: Use MySQL instead of lowdb (#15)
* Safer process.env access

* Add endpoint support for MongoDB

* Changed my mind, don't let callers choose a database, leave that up to the server

* Use mongoDB instead of lowDB

* Simplify the file storage API

* Fix newDocumentId generator

* Update nodemon

* Fix issues from the merge

* Simpler path

* Document IDs can't be empty

* refactor: Use Prisma instead of mongoose

* refactor: Use PlanetScale instead of MongoDB

* refactor: More efficient Prisma writes

* refactor: Use a JSON field instead of a relation for required MFA auth

* fix: Ensure exactly one of each value enters the requiredAddtlAuth field

* feat(db): Add automated database migration logic to move from lowdb to MySQL

* chore: Test and fix issues with database migrator

* fix: Ensure that our strings will fit in the database

* fix: Our list of collection IDs may shorten later, so avoid enums

* fix: We don't use MongoDB

* docs: Document string length limits in openapi.yml

* fix: Make LGTM happy

* fix: Another sacrifice to LGTM

* fix: Turns out we don't need to write at all to the legacy database

* feat: Move file attachments into the database; they're probably small enough

* fix: Put changelog to spec

* Wait for the server to finish launching before we run tests

* fix(security): Disable `spellcheck` on password fields

* chore: v0.13.0
