# server/openapi.yaml
@@ -94,6 +94,7 @@ paths:
               properties:
                 account:
                   type: string
+                  maxLength: 191
                   description: An identifier (or username) chosen for the user's account.
                     The user may change this later.
                 password:
@@ -169,6 +170,7 @@ paths:
               properties:
                 account:
                   type: string
+                  maxLength: 191
                   description: An identifier (or username) chosen for the user's account.
                 password:
                   type: string
@@ -505,6 +507,7 @@ paths:
               properties:
                 account:
                   type: string
+                  maxLength: 191
                   description: The identifier for the user's account.
                 password:
                   type: string
@@ -570,6 +573,7 @@ paths:
               properties:
                 account:
                   type: string
+                  maxLength: 191
                   description: The identifier for the user's account.
                 password:
                   type: string
@@ -638,6 +642,7 @@ paths:
               properties:
                 account:
                   type: string
+                  maxLength: 191
                   description: The identifier for the user's account.
                 newaccount:
                   type: string
@@ -724,7 +729,7 @@ paths:
                       documentId:
                         type: string
                   data:
-                    type: object
+                    $ref: "#/components/schemas/DataItem"
       responses:
         200:
           description: All operations successful
@@ -953,6 +958,14 @@ paths:
       operationId: set-doc
       security:
         - jwt: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              oneOf:
+                - $ref: "#/components/schemas/DataItem"
+                - $ref: "#/components/schemas/Keys"
       responses:
         200:
           description: Operation succeeded
@@ -1148,10 +1161,21 @@ paths:
     post:
       tags:
         - database
-      summary: Attach binary data (at most 50 MB) to a document
+      summary: Attach binary data (at most 4.2 MB) to a document
       operationId: set-file
       security:
         - jwt: []
+      requestBody:
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              required:
+                - file
+              properties:
+                file:
+                  type: string
       responses:
         200:
           description: Operation successful
@@ -1298,6 +1322,49 @@ paths:
           type: string
 components:
   schemas:
+    DataItem:
+      type: object
+      required:
+        - ciphertext
+        - objectType
+      properties:
+        ciphertext:
+          type: string
+          maxLength: 65535
+          description: The body of the encrypted item.
+        objectType:
+          type: string
+          maxLength: 191
+          description: A short string describing the data's collection.
+        cryption:
+          type: string
+          enum:
+            - v0
+            - v1
+          default: v0
+          description: A string identifying the type of encryption used. Informs Accountable's client how to decrypt the data. The Accountable server does not care about this value, since it cannot decrypt the user's data anyway.
+    Keys:
+      type: object
+      required:
+        - dekMaterial
+        - passSalt
+      properties:
+        dekMaterial:
+          type: string
+          maxLength: 65535
+          description: Encrypted data that the Accountable client uses to derive the user's Data Encryption Key. The Data Encryption Key is used to en/decrypt the ciphertext of documents. The Accountable server cannot decrypt this key, since it never receives the user's plaintext password. The Data Encryption Key should rarely change, but the `dekMaterial` may change often.
+        passSalt:
+          type: string
+          maxLength: 191
+          description: The salt which the Accountable client used to generate the Password Key. The Password Key and the user's plaintext password are combined to decrypt the `dekMaterial` and retrieve the user's Data Encryption Key.
+        oldDekMaterial:
+          type: string
+          maxLength: 65535
+          description: The former `dekMaterial`. This value is used while changing the user's password, so the Accountable client has an opportunity to revert the password change if the user aborts the operation or something goes wrong.
+        oldPassSalt:
+          type: string
+          maxLength: 191
+          description: The former `passSalt`. This value is used while changing the user's password, so the Accountable client has an opportunity to revert the password change if the user aborts the operation or something goes wrong.
     CollectionID:
       type: string
       enum:
